# project-pulse

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  LICENSE  PUBLIC_REPO_GUIDE.md  README.md  SECURITY.md  project-pulse.example.toml  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
scripts/: start_codex_watcher.ps1
src/project_pulse/: __init__.py  audit.py  cli.py  codex_integration.py  config.py  models.py  policy.py  publisher.py  reporting.py  scanner.py  session_tracker.py
tests/: test_audit.py  test_cli.py  test_codex_integration.py  test_config.py  test_publisher.py  test_session_tracker.py
